prevent code from overflowing its parent.

--- a/src/assets/markdown-commons.scss
+++ b/src/assets/markdown-commons.scss
@@ -110,7 +110,7 @@
     padding: 0.3rem 0.5rem;
     border-radius: 0.75rem;
     background: var(--brand-light);
-    white-space: pre;
+    white-space: break-spaces;
   }
 
   pre {
